bk_ida/gccida/g0/ix86_force_to_memory
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12634:28: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  ix86_force_to_memory( machine_mode mode, rtx operand) 
                           ^
                           enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12637:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12643:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12648:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v14; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12656:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode modea; // [rsp+Ch] [rbp-34h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/i386.c:12723:22: error: use of undeclared identifier 'machine_mode'
v19 = gen_rtx_MEM( ( machine_mode)*( ( unsigned __int8 *)operanda + 2), v18); 
                     ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ix86_force_to_memory/src/obj/i386.o] Error 1
